Delete button added

--- a/PDF_read.ipynb
+++ b/PDF_read.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "07e08589",
+   "id": "e6198a09",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2237c02b",
+   "id": "45cd4630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0357c87c",
+   "id": "8bee36d5",
    "metadata": {},
    "outputs": [
     {
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "b0567cbe",
+   "execution_count": 20,
+   "id": "9e026955",
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +158,7 @@
     "        pdf = PdfFileReader(f)\n",
     "        information = pdf.getDocumentInfo()\n",
     "        page = pdf.getPage(0)\n",
+    "        #print(repr(page.extractText()))\n",
     "        print(page.extractText())\n",
     "        number_of_pages = pdf.getNumPages()\n",
     "\n",
@@ -178,6 +179,339 @@
     "if __name__ == '__main__':\n",
     "    path = 'fa3003523217.PDF'\n",
     "    extract_information(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "bda8734d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DAŇOVÝ DOKLAD\n",
+      "DAŇOVÝ DOKLAD č. 29081587\n",
+      "Číslo objednávky: 1055948695\n",
+      "Dodavatel:\n",
+      "VELKÁ PECKA s.r.o.\n",
+      "Sokolovská 100/94\n",
+      "186 00 Praha 8 – Karlín\n",
+      "IČ: 03024130\n",
+      "DIČ: CZ03024130\n",
+      "Spisová značka: C 226550 vedená u Městského soudu v Praze\n",
+      "Odběratel:\n",
+      "Veronika Deketová\n",
+      "Na Homolce 80/10\n",
+      "Praha 15000\n",
+      "Datum zdanitelného plnění: \n",
+      "20.1.2021\n",
+      "Položka\n",
+      "Množství\n",
+      "Cena za jed. vč.\n",
+      "DPH\n",
+      "Sazba\n",
+      "DPH\n",
+      "Cena bez\n",
+      "DPH\n",
+      "DPH\n",
+      "Cena vč.\n",
+      "DPH\n",
+      "Marks & Spencer Penne celozrnné těstoviny\n",
+      "1\n",
+      "ks\n",
+      "49,90 Kč\n",
+      "15 %\n",
+      "43,39 Kč\n",
+      "6,51 Kč\n",
+      "49,90 Kč\n",
+      "Marks & Spencer Rajčatová omáčka na těstoviny s Mascarpone a olivovým\n",
+      "olejem\n",
+      "1\n",
+      "ks\n",
+      "94,90 Kč\n",
+      "15 %\n",
+      "82,52 Kč\n",
+      "12,38 Kč\n",
+      "94,90 Kč\n",
+      "Pekárna Kabát Hamburgerová bulka sezam\n",
+      "2\n",
+      "ks\n",
+      "19,90 Kč\n",
+      "15 %\n",
+      "34,61 Kč\n",
+      "5,19 Kč\n",
+      "39,80 Kč\n",
+      "Brokolice 1 ks (cca 500 g)\n",
+      "1\n",
+      "ks\n",
+      "44,90 Kč\n",
+      "15 %\n",
+      "39,04 Kč\n",
+      "5,86 Kč\n",
+      "44,90 Kč\n",
+      "Salát římský (min. hm. 280g+) 1 ks\n",
+      "1\n",
+      "ks\n",
+      "31,90 Kč\n",
+      "15 %\n",
+      "27,74 Kč\n",
+      "4,16 Kč\n",
+      "31,90 Kč\n",
+      "Milki Line Cottage\n",
+      "1\n",
+      "ks\n",
+      "19,90 Kč\n",
+      "15 %\n",
+      "17,30 Kč\n",
+      "2,60 Kč\n",
+      "19,90 Kč\n",
+      "Veto Eco Patifu tofu paštika s hlívou\n",
+      "1\n",
+      "ks\n",
+      "32,90 Kč\n",
+      "15 %\n",
+      "28,61 Kč\n",
+      "4,29 Kč\n",
+      "32,90 Kč\n",
+      "Lunter Tofu marinované\n",
+      "1\n",
+      "ks\n",
+      "28,90 Kč\n",
+      "15 %\n",
+      "25,13 Kč\n",
+      "3,77 Kč\n",
+      "28,90 Kč\n",
+      "Lunter Tofu uzené\n",
+      "1\n",
+      "ks\n",
+      "28,90 Kč\n",
+      "15 %\n",
+      "25,13 Kč\n",
+      "3,77 Kč\n",
+      "28,90 Kč\n",
+      "Garden Gourmet Veggie nudličky\n",
+      "1\n",
+      "ks\n",
+      "89,90 Kč\n",
+      "15 %\n",
+      "78,17 Kč\n",
+      "11,73 Kč\n",
+      "89,90 Kč\n",
+      "Garden Gourmet Veganský Falafel\n",
+      "1\n",
+      "ks\n",
+      "89,90 Kč\n",
+      "15 %\n",
+      "78,17 Kč\n",
+      "11,73 Kč\n",
+      "89,90 Kč\n",
+      "Doprava\n",
+      "1\n",
+      "69,00 Kč\n",
+      "15 %\n",
+      "60,00 Kč\n",
+      "9,00 Kč\n",
+      "69,00 Kč\n",
+      "Haléřové vyrovnání\n",
+      "1\n",
+      "0,00 Kč\n",
+      "0 \n",
+      " %\n",
+      "0,00 Kč\n",
+      "0,00 Kč\n",
+      "0,00 Kč\n",
+      "Cena celkem\n",
+      "539,83 Kč\n",
+      "80,97 Kč\n",
+      "620,80 Kč\n",
+      "Rekapitulace DPH:\n",
+      "Základ\n",
+      "Sazba DPH\n",
+      "DPH\n",
+      "Cena vč. DPH\n",
+      "539,83 Kč\n",
+      "15\n",
+      "80,97 Kč\n",
+      "620,80 Kč\n",
+      "0,00 Kč\n",
+      "0\n",
+      "0,00 Kč\n",
+      "0,00 Kč\n",
+      "Celkem k úhradě\n",
+      "620,80 Kč\n",
+      "Celkem k úhradě\n",
+      "620,80 Kč\n",
+      "Režim: Online\n",
+      "FIK: e1726672-70af-4550-924b-047d9572d0f5-02\n",
+      "BKP: B9B30E01-C0A8303E-4DE21470-F1352DE6-EF884B21\n",
+      "Pořadové číslo účtenky: 2021/23879604\n",
+      "Podpis a razítko:\n",
+      "\n",
+      "\n",
+      "    Information about faktura-20210120-1055948695.PDF: \n",
+      "\n",
+      "    Author: None\n",
+      "    Creator: wkhtmltopdf 0.12.4\n",
+      "    Producer: Qt 4.8.7\n",
+      "    Subject: None\n",
+      "    Title: DAŇOVÝ DOKLAD č.\n",
+      "    Number of pages: 1\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'/Title': 'DAŇOVÝ DOKLAD č.',\n",
+       " '/Creator': 'wkhtmltopdf 0.12.4',\n",
+       " '/Producer': 'Qt 4.8.7',\n",
+       " '/CreationDate': \"D:20220803203856+02'00'\"}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = 'faktura-20210120-1055948695.PDF'\n",
+    "extract_information(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b49695fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * * * * * * * * * * * * * * * * * * * * * * * * *\n",
+      "DODACÍ LIST\n",
+      "Objednávka\n",
+      " \n",
+      "#1055948695\n",
+      "* * * * * * * * * * * * * * * * * * * * * * * * * * * * *\n",
+      "Doručené položky\n",
+      "Brokolice 1 ks (cca 500 g) 1ks\n",
+      "1× 44,90 Kč\n",
+      "44,90 Kč\n",
+      "Garden Gourmet Veganský Falafel 190g\n",
+      "1× 89,90 Kč\n",
+      "89,90 Kč\n",
+      "Garden Gourmet Veggie nudličky 160g\n",
+      "1× 89,90 Kč\n",
+      "89,90 Kč\n",
+      "Lunter Tofu marinované 180g\n",
+      "1× 28,90 Kč\n",
+      "28,90 Kč\n",
+      "Lunter Tofu uzené 180g\n",
+      "1× 28,90 Kč\n",
+      "28,90 Kč\n",
+      "Marks & Spencer Penne celozrnné těstoviny 500g\n",
+      "1× 49,90 Kč\n",
+      "49,90 Kč\n",
+      "Marks & Spencer Rajčatová omáčka na těstoviny s\n",
+      "Mascarpone a olivovým olejem 340g\n",
+      "1× 94,90 Kč\n",
+      "94,90 Kč\n",
+      "Milki Line Cottage 150g\n",
+      "1× 19,90 Kč\n",
+      "19,90 Kč\n",
+      "Pekárna Kabát Hamburgerová bulka sezam 114g\n",
+      "2× 19,90 Kč\n",
+      "39,80 Kč\n",
+      "Salát římský (min. hm. 280g+) 1 ks 280g\n",
+      "1× 31,90 Kč\n",
+      "31,90 Kč\n",
+      "Veto Eco Patifu tofu paštika s hlívou 100g\n",
+      "1× 32,90 Kč\n",
+      "32,90 Kč\n",
+      "Doprava a platba\n",
+      "Doprava\n",
+      "69,00 Kč\n",
+      "Spropitné kurýrovi\n",
+      "0,00 Kč\n",
+      "Sleva v kreditech\n",
+      "0,00 Kč\n",
+      "Cena celkem\n",
+      "620,80 Kč\n",
+      "Způsob úhrady\n",
+      "Kartou\n",
+      "Zákazník platí 0,00 Kč\n",
+      "Zákazník:\n",
+      "Veronika Deketová\n",
+      " \n",
+      "Na Homolce 80/10, Praha 15000\n",
+      " \n",
+      "Objevte výhody nového Premium členství! Získejte\n",
+      "dopravu zdarma, nekompromisně kvalitní\n",
+      "potraviny se slevou a garanci dnešního doručení!\n",
+      "Více na www.rohlik.cz/premium\n",
+      " \n",
+      "...........................................................................\n",
+      "Dodavatel:\n",
+      "VELKÁ PECKA s.r.o.\n",
+      "Sokolovská 94, 180 00 Praha – Karlín\n",
+      "Company Reg. No.: 03024130, VAT ID: CZ03024130\n",
+      "Bank connection: 2110952001/2700\n",
+      "File No.: C 226550\n",
+      "kept with the Municipal Court in Prague\n",
+      "Certification of bio-products CZ-BIO-003\n",
+      "Doručit do:\n",
+      "20.01.2021 22:00\n",
+      "DIČ:\n",
+      "CZ03024130\n",
+      "Provozovna:\n",
+      "11\n",
+      "Pokladna:\n",
+      "1\n",
+      "Číslo účtenky:\n",
+      "2021/23879604\n",
+      "Vystaveno:\n",
+      "21.01.2021 18:59:57\n",
+      "Původní cena:\n",
+      "620,80 Kč\n",
+      "Režim:\n",
+      "Běžný\n",
+      "FIK:\n",
+      "e1726672-70af-4550-924b-047d9572d0f5-02\n",
+      "BKP:\n",
+      "B9B30E01-C0A8303E-4DE21470-F1352DE6-\n",
+      "EF884B21\n",
+      "\n",
+      "    Information about rhl-receipt-2021-01-20-1055948695.PDF: \n",
+      "\n",
+      "    Author: None\n",
+      "    Creator: wkhtmltopdf 0.12.6\n",
+      "    Producer: Qt 4.8.7\n",
+      "    Subject: None\n",
+      "    Title: DODACÍ LIST\n",
+      "    Number of pages: 1\n",
+      "    \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'/Title': 'DODACÍ LIST',\n",
+       " '/Creator': 'wkhtmltopdf 0.12.6',\n",
+       " '/Producer': 'Qt 4.8.7',\n",
+       " '/CreationDate': 'D:20220805132437Z'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = 'rhl-receipt-2021-01-20-1055948695.PDF'\n",
+    "extract_information(path)"
    ]
   }
  ],
