barcode auto needed to finish, pdf reader

--- a/PDF_read.ipynb
+++ b/PDF_read.ipynb
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6198a09",
+   "id": "6c4fde36",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cd4630",
+   "id": "d581ef9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8bee36d5",
+   "id": "7d0c6605",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9e026955",
+   "id": "694a6825",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bda8734d",
+   "id": "cb7a3204",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b49695fa",
+   "id": "f5d76e25",
    "metadata": {},
    "outputs": [
     {
@@ -512,6 +512,55 @@
    "source": [
     "path = 'rhl-receipt-2021-01-20-1055948695.PDF'\n",
     "extract_information(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "655a3089",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!DOCTYPE html><html lang=\"cs\" dir=\"ltr\"><head><style nonce=\"Pm1j9hJXTh0oOEFmTFHRyg\">\\na, a:link, a:visited, a:active, a:hover {\\n  color: #1a73e8;\\n  text-decoration: none;\\n}\\nbody {\\n  font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;\\n  text-align: center;\\n  -ms-text-size-adjust: 100%;\\n  -moz-text-size-adjust: 100%;\\n  -webkit-text-size-adjust: 100%;\\n}\\n.box {\\n  border: 1px solid #dadce0;\\n  box-sizing: border-box;\\n  border-radius: 8px;\\n  margin: 24px auto 5px auto;\\n  max-width: 800px;\\n  padding: 24px;\\n}\\nh1 {\\n  color: #2c2c2c;\\n  font-size: 24px;\\n  hyphens: auto;\\n  margin: 24px 0;\\n}\\np, .sub, .contentText {\\n  color: #5f6368;;\\n  font-size: 14px;\\n  line-height: 20px;\\n  letter-spacing: 0.2px;\\n  text-align: left;\\n}\\n.signin {\\n  text-align: right;\\n}\\n.saveButtonContainer,\\n.saveButtonContainerNarrowScreen {\\n  width: 100%;\\n  margin-top: 12px;\\n}\\n.customButtonContainer {\\n  height: 20px;\\n  padding: 8px 0;\\n  margin-top: 8px;\\n}\\n.navigationCtasYoutube {\\n  text-align: right;\\n}\\na.button {\\n  color: #fff;\\n}\\na.hairlinebutton,\\na.nolinebutton{\\n  color: #1a73e8;\\n}\\n.navigationCtasYoutube a.hairlinebutton {\\n  border-color: #1a73e8;\\n}\\nbutton, .button {\\n  background-color: #1a73e8;\\n  border: none;\\n  color: #fff;\\n}\\ninput.button {\\n  -webkit-appearance: none;\\n}\\n.basebutton {\\n  border-radius: 4px;\\n  cursor: pointer;\\n  font-family: Roboto,RobotoDraft,Helvetica,Arial,sans-serif;\\n  font-size: 14px;\\n  font-weight: 500;\\n  height: 36px;\\n  margin: 12px 4px 0;\\n  padding: 8px 24px;\\n}\\n.hairlinebutton {\\n  background-color: #fff;\\n  border-width: 1px;\\n  border-color: #dadce0;\\n  border-style: solid;\\n  max-height: 15px;\\n}\\n.error {\\n  border: 2px solid #d93025;\\n  border-radius: 5px;\\n  color: #d93025;\\n  margin: auto;\\n  padding: 5px;\\n}\\n.box a:hover, .detailspage a:hover {\\n  text-decoration: underline;\\n}\\n.footer {\\n  margin-top: 16px;\\n}\\n.footer a {\\n  margin-left: 24px;\\n  white-space: nowrap;\\n}\\n.footer a, .footer select, .footer input {\\n  color: #757575;\\n  font-size: 12px;\\n}\\n.languagepicker {\\n  display: inline-flex;\\n  margin: 2px 0;\\n}\\n#languageform,\\n#languageselect {\\n  margin: 0 2px;\\n}\\n#languageselect {\\n  color: #757575;\\n}\\n.detailspage {\\n  margin: 24px auto 0 auto;\\n  max-width: 700px;\\n}\\n.detailspage h1, .detailspage h2 {\\n  font-size: 22px\\n}\\n.setting {\\n  border: 1px solid #dadce0;\\n  box-sizing: border-box;\\n  border-radius: 8px;\\n  margin-bottom: 11px;\\n  padding: 24px 24px 20px 24px;\\n  text-align: right;\\n}\\n.sub {\\n  padding: 24px 24px 20px 24px;\\n}\\nhr {\\n  margin: 12px -24px 12px;\\n  border: 0;\\n  border-top: 1px solid #dadce0;\\n}\\nfieldset {\\n  border: none;\\n  padding: 0;\\n}\\nlabel {\\n  margin: 24px;\\n}\\ntd {\\n  vertical-align: top;\\n}\\n.setting h2, .setting h3, h4 {\\n  color: #3c4043;\\n  margin: 0;\\n  text-align: left;\\n}\\n.yt-text {\\n  color: #5f6368;\\n  font-size: 14px;\\n  font-weight: 300;\\n}\\n.productLogoContainer {\\n  margin: auto;\\n  max-width: 360px;\\n}\\n\\n/** Narrow screen (for example a mobile device). */\\n@media only screen and (max-width: 480px) {\\n  body {\\n    margin: 18px 14px;\\n  }\\n  .footer form {\\n    margin-bottom: 3px;\\n  }\\n  .imgContainer {\\n    min-width: 96px;\\n  }\\n  button, .button {\\n    width:100%;\\n  }\\n  .basebutton {\\n    margin: 12px 0 0;\\n  }\\n  .hideOnSmallWidth {\\n    display: none;\\n  }\\n  .saveButtonContainerNarrowScreen {\\n    display: inline-block;\\n  }\\n  .saveButtonContainer {\\n    display: none;\\n  }\\n  .navigationCtasYoutube a.hairlinebutton {\\n    display: block;\\n    text-align: center;\\n  }\\n}\\n\\n@media only screen and (max-width: 380px) {\\n  .imgContainer {\\n    min-width: 72px;\\n  }\\n}\\n\\n/** Normal/non-narrow screen. */\\n@media not screen and (max-width: 480px) {\\n  body {\\n    margin: 18px 25px;\\n  }\\n  .footer form {\\n    display: inline;\\n  }\\n  .imgContainer {\\n    width: 51%;\\n  }\\n  button, .button {\\n    width: auto;\\n  }\\n  .searchButton {\\n    min-width: 182px;\\n  }\\n  .hideOnNormalWidth {\\n    display: none;\\n  }\\n  .saveButtonContainer {\\n    display: inline-block;\\n  }\\n  .saveButtonContainerNarrowScreen {\\n    display: none;\\n  }\\n}\\n</style><title>Než budete pokračovat do Vyhledávání Google</title><meta name=\"viewport\" content=\"initial-scale=1, maximum-scale=5, width=device-width\"><link rel=\"shortcut icon\" href=\"//www.google.com/favicon.ico\"></head><body><div class=\"signin\"><a href=\"https://accounts.google.com/ServiceLogin?hl=cs&amp;continue=https://www.google.com/?pws%3D0%26%2524q%3DBio%2BKefir%2Bmild%2BEAN&amp;gae=cb-eomtse\" class=\"basebutton hairlinebutton\">Přihlásit se</a></div><div class=\"box\"><img src=\"//www.gstatic.com/images/branding/googlelogo/1x/googlelogo_color_68x28dp.png\" srcset=\"//www.gstatic.com/images/branding/googlelogo/2x/googlelogo_color_68x28dp.png 2x\" width=\"68\" height=\"28\" alt=\"Google\"><h1>Než budete pokračovat na Google</h1><div class=\"contentText\"><a href=\"https://policies.google.com/technologies/cookies?hl=cs&utm_source=ucb\" target=\"_blank\">Soubory cookie</a> a\\xa0data používáme k\\xa0následujícím účelům:<ul><li>poskytování a\\xa0správa služeb Google</li><li>sledování výpadků a\\xa0ochrana proti spamům, podvodům a\\xa0zneužívání</li><li>měření zapojení publika a\\xa0statistik webů, abychom porozuměli, jak jsou naše služby využívány, a\\xa0mohli je vylepšovat</li></ul>Pokud vyberete možnost Přijmout vše, budeme soubory cookie a\\xa0data používat k\\xa0následujícím účelům:<ul><li>vývoj a\\xa0vylepšování služeb</li><li>zobrazování a\\xa0měření efektivnosti reklam</li><li>zobrazování personalizovaného obsahu (v\\xa0závislosti na vašem nastavení)</li><li>zobrazování personalizovaných reklam (v\\xa0závislosti na vašem nastavení)</li></ul><div>Pokud vyberete možnost Odmítnout vše, soubory cookie a\\xa0data k\\xa0těmto dalším účelům nebudeme používat.</div><br><div>Nepersonalizovaný obsah je ovlivněn mimo jiné tím, na co se právě díváte, aktivitou v\\xa0aktivní relaci vyhledávání nebo vaší polohou. Nepersonalizované reklamy jsou ovlivněny obsahem, na který se právě díváte, a\\xa0vaší obecnou polohou. Personalizovaný obsah a\\xa0reklamy mohou zahrnovat relevantnější výsledky, doporučení a\\xa0reklamy přizpůsobené na základě dřívější aktivity v\\xa0tomto prohlížeči (např. provedená vyhledávání na Googlu). V\\xa0relevantních případech služby upravujeme, aby byly přiměřené věku. Používáme k\\xa0tomu soubory cookie a\\xa0data.</div><br>Pokud vás zajímají další informace včetně podrobností o\\xa0správě nastavení soukromí, vyberte odkaz Další možnosti. Kdykoli také můžete navštívit adresu g.co/privacytools.</div><div class=\"saveButtonContainer\"><form action=\"https://consent.google.com/save\" method=\"POST\" style=\"display:inline;\"><input type=\"hidden\" name=\"bl\" value=\"boq_identityfrontenduiserver_20220802.02_p0\"><input type=\"hidden\" name=\"x\" value=\"8\"><input type=\"hidden\" name=\"gl\" value=\"CZ\"><input type=\"hidden\" name=\"m\" value=\"0\"><input type=\"hidden\" name=\"pc\" value=\"shp\"><input type=\"hidden\" name=\"continue\" value=\"https://www.google.com/?pws=0&amp;%24q=Bio+Kefir+mild+EAN\"><input type=\"hidden\" name=\"hl\" value=\"cs\"><input type=\"hidden\" name=\"uxe\" value=\"eomtse\"><input type=\"hidden\" name=\"set_eom\" value=\"true\"><input type=\"submit\" value=\"Odmítnout vše\" class=\"basebutton button searchButton\" aria-label=\"Odmítnout vše\"/></form><form action=\"https://consent.google.com/save\" method=\"POST\" style=\"display:inline;\"><input type=\"hidden\" name=\"bl\" value=\"boq_identityfrontenduiserver_20220802.02_p0\"><input type=\"hidden\" name=\"x\" value=\"8\"><input type=\"hidden\" name=\"gl\" value=\"CZ\"><input type=\"hidden\" name=\"m\" value=\"0\"><input type=\"hidden\" name=\"pc\" value=\"shp\"><input type=\"hidden\" name=\"continue\" value=\"https://www.google.com/?pws=0&amp;%24q=Bio+Kefir+mild+EAN\"><input type=\"hidden\" name=\"hl\" value=\"cs\"><input type=\"hidden\" name=\"uxe\" value=\"eomtse\"><input type=\"hidden\" name=\"set_eom\" value=\"false\"><input type=\"hidden\" name=\"set_sc\" value=\"true\"><input type=\"hidden\" name=\"set_aps\" value=\"true\"><input type=\"submit\" value=\"Přijmout vše\" class=\"basebutton button searchButton\" aria-label=\"Přijmout vše\"/></form></div><div class=\"saveButtonContainerNarrowScreen\"><form action=\"https://consent.google.com/save\" method=\"POST\" style=\"display:block;\"><input type=\"hidden\" name=\"bl\" value=\"boq_identityfrontenduiserver_20220802.02_p0\"><input type=\"hidden\" name=\"x\" value=\"8\"><input type=\"hidden\" name=\"gl\" value=\"CZ\"><input type=\"hidden\" name=\"m\" value=\"0\"><input type=\"hidden\" name=\"pc\" value=\"shp\"><input type=\"hidden\" name=\"continue\" value=\"https://www.google.com/?pws=0&amp;%24q=Bio+Kefir+mild+EAN\"><input type=\"hidden\" name=\"hl\" value=\"cs\"><input type=\"hidden\" name=\"uxe\" value=\"eomtse\"><input type=\"hidden\" name=\"set_eom\" value=\"false\"><input type=\"hidden\" name=\"set_sc\" value=\"true\"><input type=\"hidden\" name=\"set_aps\" value=\"true\"><input type=\"submit\" value=\"Přijmout vše\" class=\"basebutton button searchButton\" aria-label=\"Přijmout vše\"/></form><form action=\"https://consent.google.com/save\" method=\"POST\" style=\"display:block;\"><input type=\"hidden\" name=\"bl\" value=\"boq_identityfrontenduiserver_20220802.02_p0\"><input type=\"hidden\" name=\"x\" value=\"8\"><input type=\"hidden\" name=\"gl\" value=\"CZ\"><input type=\"hidden\" name=\"m\" value=\"0\"><input type=\"hidden\" name=\"pc\" value=\"shp\"><input type=\"hidden\" name=\"continue\" value=\"https://www.google.com/?pws=0&amp;%24q=Bio+Kefir+mild+EAN\"><input type=\"hidden\" name=\"hl\" value=\"cs\"><input type=\"hidden\" name=\"uxe\" value=\"eomtse\"><input type=\"hidden\" name=\"set_eom\" value=\"true\"><input type=\"submit\" value=\"Odmítnout vše\" class=\"basebutton button searchButton\" aria-label=\"Odmítnout vše\"/></form></div><div class=\"customButtonContainer\"><a href=\"https://consent.google.com/dl?continue=https://www.google.com/?pws%3D0%26%2524q%3DBio%2BKefir%2Bmild%2BEAN&amp;gl=CZ&amp;hl=cs&amp;pc=shp&amp;uxe=eomtse&amp;src=1\" class=\"basebutton nolinebutton\">Další možnosti</a></div></div><div class=\"footer\"><form action=\"https://consent.google.com/ml\" method=\"get\"><select id=\"languageselect\" name=\"hl\"><option value=\"af\">Afrikaans</option><option value=\"az\">azərbaycan</option><option value=\"bs\">bosanski</option><option value=\"ca\">català</option><option value=\"cs\" selected>Čeština</option><option value=\"cy\">Cymraeg</option><option value=\"da\">Dansk</option><option value=\"de\">Deutsch</option><option value=\"et\">eesti</option><option value=\"en-GB\">English&nbsp;(United Kingdom)</option><option value=\"en\">English&nbsp;(United States)</option><option value=\"es\">Español&nbsp;(España)</option><option value=\"es-419\">Español&nbsp;(Latinoamérica)</option><option value=\"eu\">euskara</option><option value=\"fil\">Filipino</option><option value=\"fr-CA\">Français&nbsp;(Canada)</option><option value=\"fr\">Français&nbsp;(France)</option><option value=\"ga\">Gaeilge</option><option value=\"gl\">galego</option><option value=\"hr\">Hrvatski</option><option value=\"id\">Indonesia</option><option value=\"zu\">isiZulu</option><option value=\"is\">íslenska</option><option value=\"it\">Italiano</option><option value=\"sw\">Kiswahili</option><option value=\"lv\">latviešu</option><option value=\"lt\">lietuvių</option><option value=\"hu\">magyar</option><option value=\"ms\">Melayu</option><option value=\"nl\">Nederlands</option><option value=\"no\">norsk</option><option value=\"uz\">o‘zbek</option><option value=\"pl\">polski</option><option value=\"pt-BR\">Português&nbsp;(Brasil)</option><option value=\"pt-PT\">Português&nbsp;(Portugal)</option><option value=\"ro\">română</option><option value=\"sq\">shqip</option><option value=\"sk\">Slovenčina</option><option value=\"sl\">slovenščina</option><option value=\"sr-Latn\">srpski (latinica)</option><option value=\"fi\">Suomi</option><option value=\"sv\">Svenska</option><option value=\"vi\">Tiếng Việt</option><option value=\"tr\">Türkçe</option><option value=\"el\">Ελληνικά</option><option value=\"be\">беларуская</option><option value=\"bg\">български</option><option value=\"ky\">кыргызча</option><option value=\"kk\">қазақ тілі</option><option value=\"mk\">македонски</option><option value=\"mn\">монгол</option><option value=\"ru\">Русский</option><option value=\"sr\">српски</option><option value=\"uk\">Українська</option><option value=\"ka\">ქართული</option><option value=\"hy\">հայերեն</option><option value=\"iw\">עברית</option><option value=\"ur\">اردو</option><option value=\"ar\">العربية</option><option value=\"fa\">فارسی</option><option value=\"am\">አማርኛ</option><option value=\"ne\">नेपाली</option><option value=\"mr\">मराठी</option><option value=\"hi\">हिन्दी</option><option value=\"as\">অসমীয়া</option><option value=\"bn\">বাংলা</option><option value=\"pa\">ਪੰਜਾਬੀ</option><option value=\"gu\">ગુજરાતી</option><option value=\"or\">ଓଡ଼ିଆ</option><option value=\"ta\">தமிழ்</option><option value=\"te\">తెలుగు</option><option value=\"kn\">ಕನ್ನಡ</option><option value=\"ml\">മലയാളം</option><option value=\"si\">සිංහල</option><option value=\"th\">ไทย</option><option value=\"lo\">ລາວ</option><option value=\"my\">မြန်မာ</option><option value=\"km\">ខ្មែរ</option><option value=\"ko\">한국어</option><option value=\"ja\">日本語</option><option value=\"zh-CN\">简体中文</option><option value=\"zh-TW\">繁體中文</option><option value=\"zh-HK\">繁體中文&nbsp;(香港)</option></select><input type=\"hidden\" name=\"oldhl\" value=\"cs\"><input type=\"hidden\" name=\"gl\" value=\"CZ\"><input type=\"hidden\" name=\"m\" value=\"0\"><input type=\"hidden\" name=\"pc\" value=\"shp\"><input type=\"hidden\" name=\"continue\" value=\"https://www.google.com/?pws=0&amp;%24q=Bio+Kefir+mild+EAN\"><input type=\"hidden\" name=\"src\" value=\"1\"><input type=\"submit\" value=\"Změna jazyka\"></form><a href=\"https://policies.google.com/privacy?hl=cs&utm_source=ucb\">Zásady ochrany soukromí</a> <a href=\"https://policies.google.com/terms?hl=cs&utm_source=ucb\">Smluvní podmínky</a></div></body></html>'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "search_string = \"Bio Kefir mild\"\n",
+    "search_part = \" EAN\"\n",
+    "\n",
+    "headers = {\n",
+    "            'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:102.0) Gecko/20100101 Firefox/102.0',\n",
+    "            'Accept': '*/*',\n",
+    "            'Accept-Language': 'cs,sk;q=0.8,en-US;q=0.5,en;q=0.3',\n",
+    "            'Accept-Encoding': 'gzip, deflate, br',\n",
+    "            'Referer': 'https://www.google.com/',\n",
+    "            'Connection': 'keep-alive',\n",
+    "            'Sec-Fetch-Dest': 'script',\n",
+    "            'Sec-Fetch-Mode': 'no-cors',\n",
+    "            'Sec-Fetch-Site': 'cross-site',\n",
+    "    \n",
+    "        }\n",
+    "params = {\n",
+    "            ('$q', search_string + search_part),\n",
+    "            ('pws', 0)\n",
+    "#            ('$top', '250'),    # 250 is the maximum possible\n",
+    "#            ('$skip', self.skipping),\n",
+    "#            ('key', 'AjaYWYGCsS71QLms_E2Q-DSLgmiVBjK8yX-jZev8WIby0DCkjWC3pVIkktsun6KO'),\n",
+    "#            ('$format', 'json'),\n",
+    "#            ('jsonp', 'Microsoft_Maps_Network_QueryAPI_1'),\n",
+    "        }\n",
+    "\n",
+    "response = requests.get(\"https://google.com/\", params=params)\n",
+    "response.text"
    ]
   }
  ],
